Code cleanup per sonar scan results